Chapter 3 Practice/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_45\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\spsmith\Desktop\unit2Classes\Chapter 3 Practice
-d
C:\Users\spsmith\Desktop\unit2Classes\Chapter 3 Practice\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\spsmith\Desktop\unit2Classes\Chapter 3 Practice\Car.java
<---- end of javadoc command ---->
Loading source file C:\Users\spsmith\Desktop\unit2Classes\Chapter 3 Practice\Car.java...
C:\Users\spsmith\Desktop\unit2Classes\Chapter 3 Practice\Car.java:26: error: ';' expected
        fuelTank=0
                  ^
1 error
